# gettingStarted

./: .gitignore  CMakeLists.txt
src/: input.txt  main.cpp
